j--/src/jminusminus/Parser.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.util.ArrayList;

import javax.imageio.ImageIO;
import javax.naming.spi.DirStateFactory.Result;

import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a
 * {@link LookaheadScanner}), parses a Java compilation unit (program file),
 * taking tokens from the LookaheadScanner, and produces an abstract syntax
 * tree (AST) for it.
 * <p>
 * See Appendix C.2.2 in the textbook or the
 * <a href="https://docs.oracle.com/javase/specs/jls/se8/html/index.html">Java
 * Language Specifications</a>
 * for the full syntactic grammar.
 */

public class Parser {

    /** The lexical analyzer with which tokens are scanned. */
    private LookaheadScanner scanner;

    /** Whether a parser error has been found. */
    private boolean isInError;

    /** Whether we have recovered from a parser error. */
    private boolean isRecovered;

    /**
     * Constructs a parser from the given lexical analyzer.
     * 
     * @param scanner
     *                the lexical analyzer with which tokens are scanned.
     */

    public Parser(LookaheadScanner scanner) {
        this.scanner = scanner;
        isInError = false;
        isRecovered = true;
        scanner.next(); // Prime the pump
    }

    /**
     * Has a parser error occurred up to now?
     * 
     * @return {@code true} if a parser error occurred; {@code false} otherwise.
     */

    public boolean errorHasOccurred() {
        return isInError;
    }

    // ////////////////////////////////////////////////
    // Parsing Support ///////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Is the current token this one?
     * 
     * @param sought
     *               the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean see(TokenKind sought) {
        return (sought == scanner.token().kind());
    }

    /**
     * Look at the current (unscanned) token to see if it's one we're looking
     * for. If so, scan it and return true; otherwise return false (without
     * scanning a thing).
     * 
     * @param sought
     *               the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean have(TokenKind sought) {
        if (see(sought)) {
            scanner.next();
            return true;
        } else {
            return false;
        }
    }

    /**
     * Attempt to match a token we're looking for with the current input token.
     * If we succeed, scan the token and go into a "isRecovered" state. If we
     * fail, then what we do next depends on whether or not we're currently in a
     * "isRecovered" state: if so, we report the error and go into an
     * "Unrecovered" state; if not, we repeatedly scan tokens until we find the
     * one we're looking for (or EOF) and then return to a "isRecovered" state.
     * This gives us a kind of poor man's syntactic error recovery. The strategy
     * is due to David Turner and Ron Morrison.
     * 
     * @param sought
     *               the token we're looking for.
     */

    private void mustBe(TokenKind sought) {
        if (scanner.token().kind() == sought) {
            scanner.next();
            isRecovered = true;
        } else if (isRecovered) {
            isRecovered = false;
            reportParserError("%s found where %s sought", scanner.token()
                    .image(), sought.image());
        } else {
            // Do not report the (possibly spurious) error,
            // but rather attempt to recover by forcing a match.
            while (!see(sought) && !see(EOF)) {
                scanner.next();
            }
            if (see(sought)) {
                scanner.next();
                isRecovered = true;
            }
        }
    }

    /**
     * Pull out the ambiguous part of a name and return it.
     * 
     * @param name
     *             with an ambiguos part (possibly).
     * @return ambiguous part or null.
     */

    private AmbiguousName ambiguousPart(TypeName name) {
        String qualifiedName = name.toString();
        int lastDotIndex = qualifiedName.lastIndexOf('.');
        return lastDotIndex == -1 ? null // It was a simple
                // name
                : new AmbiguousName(name.line(), qualifiedName.substring(0,
                        lastDotIndex));
    }

    /**
     * Report a syntax error.
     * 
     * @param message
     *                message identifying the error.
     * @param args
     *                related values.
     */

    private void reportParserError(String message, Object... args) {
        isInError = true;
        isRecovered = false;
        System.err
                .printf("%s:%d: ", scanner.fileName(), scanner.token().line());
        System.err.printf(message, args);
        System.err.println();
    }

    // ////////////////////////////////////////////////
    // Lookahead /////////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Are we looking at an IDENTIFIER followed by a LPAREN? Look ahead to find
     * out.
     * 
     * @return true if we're looking at IDENTIFIER LPAREN; false otherwise.
     */

    private boolean seeIdentLParen() {
        scanner.recordPosition();
        boolean result = have(IDENTIFIER) && see(LPAREN);
        scanner.returnToPosition();
        return result;
    }

    /**
     * Are we looking at a static initialization block ie.
     *
     * <pre>
     *   STATIC block ...
     * </pre>
     *
     * Look ahead to find out.
     *
     * @return true iff we're looking at a static initialization block; false otherwise.
     */

    private boolean seeStaticInitBlock() {
        scanner.recordPosition();
        if (!have(STATIC)) {
            scanner.returnToPosition();
            return false;
        }
        if (!have(LCURLY)) {
            scanner.returnToPosition();
            return false;
        }

        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a cast? ie.
     * 
     * <pre>
     *   LPAREN type RPAREN ...
     * </pre>
     * 
     * Look ahead to find out.
     * 
     * @return true iff we're looking at a cast; false otherwise.
     */

    private boolean seeCast() {
        scanner.recordPosition();
        if (!have(LPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        if (seeBasicType()) {
            scanner.returnToPosition();
            return true;
        }
        if (!see(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        } else {
            scanner.next(); // Scan the IDENTIFIER
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(RPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a local variable declaration? ie.
     * 
     * <pre>
     *   type IDENTIFIER {LBRACK RBRACK} ...
     * </pre>
     * 
     * Look ahead to determine.
     * 
     * @return true iff we are looking at local variable declaration; false
     *         otherwise.
     */

    private boolean seeLocalVariableDeclaration() {
        scanner.recordPosition();
        if (have(IDENTIFIER)) {
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        } else if (seeBasicType()) {
            scanner.next();
        } else {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a basic type? ie.
     * 
     * <pre>
     * BOOLEAN | CHAR | INT | DOUBLE | FLOAT | LONG | BYTE | SHORT
     * </pre>
     * 
     * @return true if we're looking at a basic type; false otherwise.
     */

    private boolean seeBasicType() {
        return (see(BOOLEAN) || see(CHAR) || see(INT)) || see(DOUBLE) || see(LONG) || see(FLOAT) || see(BYTE) || see(SHORT);
    }

    /**
     * Are we looking at a reference type? ie.
     * 
     * <pre>
     *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
     *                   | qualifiedIdentifier {LBRACK RBRACK}
     * </pre>
     * 
     * @return true iff we're looking at a reference type; false otherwise.
     */

    private boolean seeReferenceType() {
        if (see(IDENTIFIER)) {
            return true;
        } else {
            scanner.recordPosition();
            if (have(BOOLEAN) || have(CHAR) || have(INT) || have(DOUBLE) || have(FLOAT) || have(LONG) || have(BYTE) || have(SHORT)) {
                if (have(LBRACK) && see(RBRACK)) {
                    scanner.returnToPosition();
                    return true;
                }
            }
            scanner.returnToPosition();
        }
        return false;
    }

    /**
     * Are we looking at []?
     * 
     * @return true iff we're looking at a [] pair; false otherwise.
     */

    private boolean seeDims() {
        scanner.recordPosition();
        boolean result = have(LBRACK) && see(RBRACK);
        scanner.returnToPosition();
        return result;
    }

    /**
     * Are we looking at a typeDeclarationModifier? ie.
     * 
     * <pre>
     * PUBLIC | PROTECTED | PRIVATE | STATIC | ABSTRACT | FINAL | SCRIPTFP
     * </pre>
     * 
     * This is mostly used to check if there is a class/interface declaration
     * coming.
     * 
     * @return
     */
    private boolean seeTypeDeclModifiers() {
        return (see(PUBLIC) || see(PROTECTED) || see(PRIVATE) || see(STATIC) || see(ABSTRACT) || see(FINAL)
                || see(STRICTFP));
    }

    /**
     * Are we looking at a modifier? ie.
     * 
     * <pre>
     * PUBLIC | PROTECTED | PRIVATE | STATIC |
     *         ABSTRACT | TRANSIENT | FINAL | NATIVE |
     *         THREADSAFE | SYNCHRONIZED | CONST | VOLATILE | STRICTFP
     * </pre>
     * 
     * @return
     */
    private boolean seeModifiers() {
        return (see(PUBLIC) || see(PROTECTED) || see(PRIVATE) || see(STATIC) ||
                see(ABSTRACT) || see(TRANSIENT) || see(FINAL) || see(NATIVE) ||
                see(THREADSAFE) || see(SYNCHRONIZED) || see(CONST) || see(VOLATILE) || see(STRICTFP));
    }

    /**
     * Are we looking inside the parentheses of a traditional for loop declaration?
     * ie.
     * 
     * <pre>
     *      for( [forInit] ; [expression] ; [forUpdate])
     * </pre>
     * 
     * @return
     */
    private boolean seeTraditional() {
        boolean result = false;
        scanner.recordPosition();
        if (have(SEMI)) {
            result = true;
        } else {
            while (!see(RPAREN)) {
                scanner.next();
                if (have(SEMI)) {
                    result = true;
                    break;
                }
            }
        }
        scanner.returnToPosition();
        return result;
    }

    /**
     * Are we looking at any of the relational tokens? ie.
     * 
     * <pre>
     *  LT, GT, LE, GE
     * </pre>
     * 
     * @return
     */
    private boolean seeRelational(){
        boolean result = false;
        scanner.recordPosition();
        if (have(LT)) {
            result = true;
        } else if (have(GT)) {
            result = true;
        } else if (have(LE)) {
            result = true;
        } else if (have(GE)) {
            result = true;
        }
        scanner.returnToPosition();
        return result;
    }

    // ////////////////////////////////////////////////
    // Parser Proper /////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Parses a compilation unit (a program file) and constructs an AST for it.
     * After constructing the Parser, this is its entry point.
     * 
     * <pre>
     *   compilationUnit ::= [PACKAGE qualifiedIdentifier SEMI]
     *                       {IMPORT  qualifiedIdentifier SEMI}
     *                       {typeDeclaration}
     *                       EOF
     * </pre>
     * 
     * @return an AST for a compilationUnit.
     */

    public JCompilationUnit compilationUnit() {
        int line = scanner.token().line();
        TypeName packageName = null; // Default
        if (have(PACKAGE)) {
            packageName = qualifiedIdentifier();
            mustBe(SEMI);
        }
        ArrayList<TypeName> imports = new ArrayList<TypeName>();
        while (have(IMPORT)) {
            imports.add(qualifiedIdentifier());
            mustBe(SEMI);
        }
        ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
        while (!see(EOF)) {
            JAST typeDeclaration = typeDeclaration();
            if (typeDeclaration != null) {
                typeDeclarations.add(typeDeclaration);
            }
        }
        mustBe(EOF);
        return new JCompilationUnit(scanner.fileName(),
                line, packageName,
                imports, typeDeclarations);
    }

    /**
     * Parse a qualified identifier.
     * 
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
     * </pre>
     * 
     * @return an instance of TypeName.
     */

    private TypeName qualifiedIdentifier() {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String qualifiedIdentifier = scanner.previousToken().image();
        while (have(DOT)) {
            mustBe(IDENTIFIER);
            qualifiedIdentifier += "." + scanner.previousToken().image();
        }
        return new TypeName(line, qualifiedIdentifier);
    }

    /**
     * Parse a type declaration.
     * 
     * <pre>
     *   typeDeclaration ::= typeDeclarationModifiers (classDeclaration | interfaceDeclaration)
     * </pre>
     * 
     * @return an AST for a typeDeclaration.
     */

    private JAST typeDeclaration() {
        ArrayList<String> mods = typeDeclarationModifiers();

        if (see(CLASS)) {
            return classDeclaration(mods);
        } else if (see(INTERFACE)) {
            return interfaceDeclaration(mods);

        } else {

            if (have(SEMI)) {
                reportParserError("Warning: Ignored lone SEMI");
                return null;
            } else {
                // This should not happen but in case it does
                reportParserError("Expected either CLASS or INTERFACE received: " + scanner.token().kind());
                have(scanner.token().kind());
                return null;
            }
        }
    }

    /**
     * Parse class or interface modifiers.
     * 
     * <pre>
     *   typeDeclarationModifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
     *                  ABSTRACT | FINAL | STRICTFP}
     * </pre>
     * 
     * Check for duplicates, and conflicts among access modifiers (public,
     * protected, and private). Otherwise, no checks.
     * 
     * @return a list of modifiers.
     */
    private ArrayList<String> typeDeclarationModifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean scannedFINAL = false;
        boolean scannedSTRICTFP = false;
        boolean more = true;
        while (more) {
            if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else if (have(FINAL)) {
                mods.add("final");
                if (scannedFINAL) {
                    reportParserError("Repeated modifier: final");
                }
                scannedFINAL = true;
            } else if (have(STRICTFP)) {
                mods.add("strictfp");
                if (scannedSTRICTFP) {
                    reportParserError("Repeated modifier: strictfp");
                }
                scannedSTRICTFP = true;
            } else {
                more = false;
            }
        }

        return mods;
    }

    /**
     * Parse modifiers.
     * 
     * <pre>
     *   modifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
     *                  ABSTRACT | TRANSIENT | FINAL | NATIVE | THREADSAFE | 
     *                  SYNCHRONIZED | CONST | VOLATILE | STRICTFP }
     * </pre>
     * 
     * Check for duplicates, and conflicts among access modifiers (public,
     * protected, and private). Otherwise, no checks.
     * 
     * @return a list of modifiers.
     */

    private ArrayList<String> modifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean scannedTRANSIENT = false;
        boolean scannedFINAL = false;
        boolean scannedNATIVE = false;
        boolean scannedTHREADSAFE = false;
        boolean scannedSYNCHRONIZED = false;
        boolean scannedCONST = false;
        boolean scannedVOLATILE = false;
        boolean scannedSTRICTFP = false;
        boolean more = true;
        while (more) {
            if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else if (have(FINAL)) {
                mods.add("final");
                if (scannedFINAL) {
                    reportParserError("Repeated modifier: final");
                }
                scannedFINAL = true;
            } else if (have(TRANSIENT)) {
                mods.add("transient");
                if (scannedTRANSIENT) {
                    reportParserError("Repeated modifier: transient");
                }
                scannedTRANSIENT = true;
            } else if (have(NATIVE)) {
                mods.add("native");
                if (scannedNATIVE) {
                    reportParserError("Repeated modifier: native");
                }
                scannedNATIVE = true;
            } else if (have(THREADSAFE)) {
                mods.add("threadsafe");
                if (scannedTHREADSAFE) {
                    reportParserError("Repeated modifier: threadsafe");
                }
                scannedTHREADSAFE = true;
            } else if (have(SYNCHRONIZED)) {
                mods.add("synchronized");
                if (scannedSYNCHRONIZED) {
                    reportParserError("Repeated modifier: synchronized");
                }
                scannedSYNCHRONIZED = true;
            } else if (have(CONST)) {
                // Const is reserved but not valid so check in the analysis
                mods.add("const");
                if (scannedCONST) {
                    reportParserError("Repeated modifier: const");
                }
                scannedCONST = true;
            } else if (have(VOLATILE)) {
                mods.add("volatile");
                if (scannedVOLATILE) {
                    reportParserError("Repeated modifier: volatile");
                }
                scannedVOLATILE = true;
            } else if (have(STRICTFP)) {
                mods.add("strictfp");
                if (scannedSTRICTFP) {
                    reportParserError("Repeated modifier: strictfp");
                }
                scannedSTRICTFP = true;
            } else {
                more = false;
            }
        }
        return mods;
    }

    /**
     * Parse a class declaration.
     * 
     * <pre>
     *   classDeclaration ::= CLASS IDENTIFIER [EXTENDS qualifiedIdentifier] 
     *                          [implements qualifiedIdentifier {, qualifiedIdentifier}]
     *                              classBody
     * </pre>
     * 
     * A class which doesn't explicitly extend another (super) class implicitly
     * extends the superclass java.lang.Object.
     * 
     * @param mods
     *             the class modifiers.
     * @return an AST for a classDeclaration.
     */

    private JClassDeclaration classDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(CLASS);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        Type superClass;
        ArrayList<TypeName> implementations = new ArrayList<>();

        if (have(EXTENDS)) {
            superClass = qualifiedIdentifier();
        } else {
            superClass = Type.OBJECT;
        }

        if (have(IMPLEMENTS)) {
            implementations.add(qualifiedIdentifier()); // (Exception, NullPointerException, etc.)

            // Needs to check for more identifiers
            while (have(COMMA)) {
                implementations.add(qualifiedIdentifier());
            }
        }

        return new JClassDeclaration(line, mods, name, superClass, implementations, classBody());
    }

    /**
     * Parse an interface declaration
     * 
     * <pre>
     *  interfaceDeclaration ::= INTERFACE IDENTIFIER // cannot be final
     *                              [EXTENDS qualifiedIdentifier { ,qualifiedIdentifier}]
     *                                  interfaceBody
     * </pre>
     * 
     * @param mods the interface modifiers
     * @return an AST for a interfaceDeclaration
     */
    private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(INTERFACE);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        ArrayList<TypeName> superClasses = new ArrayList<>(); // in an interface it can be more than one

        if (have(EXTENDS)) {
            superClasses.add(qualifiedIdentifier());
            while (have(COMMA)) {
                superClasses.add(qualifiedIdentifier());
            }
        } else {
            superClasses = null;
        }

        return new JInterfaceDeclaration(line, mods, name, superClasses, interfaceBody());
    }

    /**
     * Parse a class body.
     * 
     * <pre>
     *   classBody ::= LCURLY
     *                      SEMI
     *                      static block
     *                      block
     *                   modifiers memberDecl
     *                 RCURLY
     * </pre>
     * 
     * @return list of members in the class body.
     */

    private ArrayList<JMember> classBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            if (have(SEMI)) {
                reportParserError("Warning: Ignored lone SEMI");
            } else if (seeStaticInitBlock()) {
                have(STATIC);
                JBlock block = block();
                members.add(new JStaticBlock(block.line, block.statements()));
            } else if (see(LCURLY)) {
                JBlock block = block();
                members.add(new JInitBlock(block.line, block.statements()));
            } else {
                members.add(memberDecl(modifiers()));
            }
        }
        mustBe(RCURLY);
        return members;
    }

    /**
     * Parse an interfaceBody
     * 
     * <pre>
     * interfaceBody ::= LCURLY
     * SEMI
     * modifiers memberDecl
     * RCURLY
     * 
     * @return
     */
    private ArrayList<JMember> interfaceBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();

        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            if (have(SEMI)) {
                reportParserError("Warning: Ignored lone SEMI");

            } else {
                members.add(interfaceMemberDecl(modifiers()));
            }
        }
        mustBe(RCURLY);

        return members;
    }

    /**
     * Parse a member declaration.
     * 
     * <pre>
     *   memberDecl ::= classDeclaration        // inner class
     *                 | interfaceDeclaration   // inner interface
     *                 | IDENTIFIER            // constructor
     *                    formalParameters
     *                    [throws qualifiedIdentifier { , qualifiedIdentifier}] block
     *                 | (VOID | type) IDENTIFIER  // method
     *                    formalParameters 
     *                      [throws qualifiedIdentifier { , qualifiedIdentifier}] (block | ;)
     *                | type variableDeclarators SEMI
     * </pre>
     * 
     * @param mods
     *             the class member modifiers.
     * @return an AST for a memberDecl.
     */

    private JMember memberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;

        // Needs to check for inner classes and interfaces
        if (see(CLASS)) {
            ArrayList<String> subMods = new ArrayList<>();
            subMods.add(scanner.previousToken().toString());
            memberDecl = classDeclaration(subMods);

        } else if (see(INTERFACE)) {
            ArrayList<String> subMods = new ArrayList<>();
            subMods.add(scanner.previousToken().toString());
            memberDecl = interfaceDeclaration(subMods);

        } else if (seeIdentLParen()) {
            // A constructor
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            ArrayList<TypeName> exceptions = new ArrayList<>();

            // optional 'throws'
            if (have(THROWS)) {
                exceptions.add(qualifiedIdentifier());

                // Needs to check for more identifiers
                while (have(COMMA)) {
                    exceptions.add(qualifiedIdentifier());
                }
            }
            JBlock body = block();
            memberDecl = new JConstructorDeclaration(line, mods, name, params, exceptions, body);
        } else {
            // A Method
            Type type = null;
            if (have(VOID)) {
                // void method
                type = Type.VOID;
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                ArrayList<TypeName> exceptions = new ArrayList<>();

                // optional 'throws'
                if (have(THROWS)) {
                    exceptions.add(qualifiedIdentifier());

                    // Needs to check for more identifiers
                    while (have(COMMA)) {
                        exceptions.add(qualifiedIdentifier());
                    }
                }

                JBlock body = have(SEMI) ? null : block();
                memberDecl = new JMethodDeclaration(line, mods, name, type,
                        params, exceptions, body);
            } else {
                type = type();
                if (seeIdentLParen()) {
                    // Non void method
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    ArrayList<TypeName> exceptions = new ArrayList<>(); // holds all qualifiedIdentifiers

                    // optional 'throws'
                    if (have(THROWS)) {
                        exceptions.add(qualifiedIdentifier()); // (Exception, NullPointerException, etc.)

                        // Needs to check for more identifiers
                        while (have(COMMA)) {
                            exceptions.add(qualifiedIdentifier());
                        }
                    }
                    JBlock body = have(SEMI) ? null : block();
                    memberDecl = new JMethodDeclaration(line, mods, name, type,
                            params, exceptions, body);
                } else {
                    // Field
                    memberDecl = new JFieldDeclaration(line, mods,
                            variableDeclarators(type));
                    mustBe(SEMI);
                }
            }
        }
        return memberDecl;
    }

    /**
     * Parse a interfaceMemberDecl
     * 
     * <pre>
     *  interfaceMemberDecl ::= classDeclaration // inner class
     *                      | interfaceDeclaration // inner interface
     *                      | (VOID | type) IDENTIFIER // method
     *                          formalParameters { [ ] }
     *                              [throws qualifiedIdentifier {, qualifiedIdentifier}] SEMI
     *                      | type variableDeclarators SEMI // must have inits
     * </pre>
     * 
     * @see memberDecl
     * @param mods interface member modifiers
     * @return an AST for a interfaceMemberDecl
     */
    private JMember interfaceMemberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;
        Type type = null;

        // Needs to check for inner classes and interfaces
        if (see(CLASS)) {
            ArrayList<String> subMods = new ArrayList<>();
            subMods.add(scanner.previousToken().toString());
            memberDecl = classDeclaration(subMods);

        } else if (see(INTERFACE)) {
            ArrayList<String> subMods = new ArrayList<>();
            subMods.add(scanner.previousToken().toString());
            memberDecl = interfaceDeclaration(subMods);
        }

        // Checking of methods: (VOID | type) IDENTIFIER
        else if (have(VOID)) {
            type = Type.VOID;
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters(); // formalParameters { [ ] }
            ArrayList<TypeName> exceptions = new ArrayList<>(); // holds all qualifiedIdentifiers

            // optional 'throws' [throws qualifiedIdentifier {, qualifiedIdentifier}] SEMI
            if (have(THROWS)) {
                exceptions.add(qualifiedIdentifier()); // (Exception, NullPointerException, etc.)

                // Needs to check for more identifiers
                while (have(COMMA)) {
                    exceptions.add(qualifiedIdentifier());
                }
            }

            mustBe(SEMI);

            // methods in interfaces don't have a body
            memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, null);

        } else {
            type = type();
